// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 2 predictions 1`] = `
<div
  className="m-tnm-sidebar__headsign-schedule"
>
  <div
    className="m-tnm-sidebar__headsign"
  >
    <div
      className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
    >
      Watertown
    </div>
    <div
      className="m-tnm-sidebar__via"
    >
      via Copley (Express)
    </div>
  </div>
  <div
    className="m-tnm-sidebar__schedules"
  >
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          14
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          min
        </div>
      </div>
    </div>
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          44
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          min
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders a status and train name for Commuter Rail 1`] = `
<div
  className="m-tnm-sidebar__headsign-schedule"
>
  <div
    className="m-tnm-sidebar__headsign"
  >
    <div
      className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
    >
      Framingham
    </div>
    <div
      className="m-tnm-sidebar__headsign-train"
    >
      Train 591
    </div>
  </div>
  <div
    className="m-tnm-sidebar__schedules"
  >
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time m-tnm-sidebar__time--commuter-rail"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          4:30 PM
        </div>
        <div
          className="m-tnm-sidebar__status"
        >
          On Time
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders a status and train name for Commuter Rail with track number if available 1`] = `
<div
  className="m-tnm-sidebar__headsign-schedule"
>
  <div
    className="m-tnm-sidebar__headsign"
  >
    <div
      className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
    >
      Framingham
    </div>
    <div
      className="m-tnm-sidebar__headsign-train"
    >
      Train 591
    </div>
  </div>
  <div
    className="m-tnm-sidebar__schedules"
  >
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time m-tnm-sidebar__time--commuter-rail"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          4:30 PM
        </div>
        <div
          className="m-tnm-sidebar__status"
        >
          On time track 1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders prediction time string 1`] = `
<div
  className="m-tnm-sidebar__headsign-schedule"
>
  <div
    className="m-tnm-sidebar__headsign"
  >
    <div
      className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
    >
      Watertown
    </div>
    <div
      className="m-tnm-sidebar__via"
    >
      via Copley (Express)
    </div>
  </div>
  <div
    className="m-tnm-sidebar__schedules"
  >
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          14
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          min
        </div>
      </div>
    </div>
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          10:35
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          PM
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders scheduled time when prediction is null 1`] = `
<div
  className="m-tnm-sidebar__headsign-schedule"
>
  <div
    className="m-tnm-sidebar__headsign"
  >
    <div
      className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
    >
      Watertown
    </div>
    <div
      className="m-tnm-sidebar__via"
    >
      via Copley (Express)
    </div>
  </div>
  <div
    className="m-tnm-sidebar__schedules"
  >
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          14
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          min
        </div>
      </div>
    </div>
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          12:08
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          PM
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders uncondensed bus headsign name as --small 1`] = `
<div
  className="m-tnm-sidebar__headsign-schedule"
>
  <div
    className="m-tnm-sidebar__headsign"
  >
    <div
      className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--small"
    >
      Watertown
    </div>
    <div
      className="m-tnm-sidebar__via"
    >
      via Copley (Express)
    </div>
  </div>
  <div
    className="m-tnm-sidebar__schedules"
  >
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          14
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          min
        </div>
      </div>
    </div>
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          44
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          min
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it splits the headsign name when it contains 'via'  1`] = `
<div
  className="m-tnm-sidebar__headsign-schedule"
>
  <div
    className="m-tnm-sidebar__headsign"
  >
    <div
      className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
    >
      Watertown
    </div>
    <div
      className="m-tnm-sidebar__via"
    >
      via Harvard Square
    </div>
  </div>
  <div
    className="m-tnm-sidebar__schedules"
  >
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          14
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          min
        </div>
      </div>
    </div>
    <div
      className="m-tnm-sidebar__schedule"
    >
      <div
        className="m-tnm-sidebar__time"
      >
        <div
          className="m-tnm-sidebar__time-number"
        >
          44
        </div>
        <div
          className="m-tnm-sidebar__time-mins"
        >
          min
        </div>
      </div>
    </div>
  </div>
</div>
`;
